--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
+<!DOCTYPE html>
 <html>
 <head>
 
-<link rel="stylesheet/less" type="text/css" href="css/infra.css" />
-<script src="js/less-1.4.1.min.js" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="css/infra.css" />
+<!-- <link rel="stylesheet" type="text/css" href="mystyle.css"> -->
+<!-- <script src="js/less-1.4.1.min.js" type="text/javascript"></script> -->
+<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script src="js/modernizr.custom.18245.js" type="text/javascript"></script>
+<script src="js/infra.js" type="text/javascript"></script>
 
 </head>
 <body>
@@ -60,6 +65,16 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis congue urna tortor, quis porta lorem hendrerit et. Morbi non leo eget ligula tempus varius. Cras elit libero, varius sed pulvinar ac, bibendum quis velit. Nullam pellentesque, purus id varius tempus, neque enim vulputate nibh, eu euismod tellus metus eu arcu. Nulla scelerisque augue lacus, non dictum sapien pharetra sed. Aliquam at consequat dui. Praesent sit amet ornare metus. Proin lorem neque, vulputate at commodo in, pharetra aliquam velit. Nullam in purus sed purus adipiscing tempus. Nullam in dignissim arcu. Interdum et malesuada fames ac ante ipsum primis in faucibus. In hac habitasse platea dictumst.</p>
 					<p>Pellentesque id suscipit erat, sit amet elementum est. Sed in augue tempus, auctor lectus quis, ultrices lacus. Donec quis sem sagittis, aliquam mauris ac, rutrum elit. Nam erat ipsum, congue eu nibh eget, ultricies imperdiet leo. Vestibulum auctor, diam eget tincidunt varius, neque nulla aliquam felis, ut aliquam diam dui nec urna. Suspendisse quis orci libero. Quisque sed nulla in lacus sagittis laoreet. Integer vel leo non tellus tempor bibendum id vitae quam. Pellentesque sed neque eget metus hendrerit accumsan.<p>
 					<p>Nam eget erat nunc. In ac eros pulvinar, hendrerit magna in, tempus lacus. Sed consequat at sapien sed tincidunt. Nullam tempor porta urna, quis elementum nibh aliquam ac. Suspendisse mollis dapibus erat, quis pharetra mi gravida ornare. Cras vitae sodales odio. Donec ac elit eu orci suscipit consectetur. Aliquam erat volutpat. Etiam vel consectetur libero. Fusce ut ipsum arcu. Aenean ut turpis in nisl hendrerit posuere eget et diam. Cras gravida dui odio, at molestie magna condimentum sit amet. Nunc viverra nunc a ipsum luctus, ut tristique dui suscipit. Proin ut ultricies purus, sed pharetra turpis.</p>
+				</div>
+			</div>
+			<div class="row margin-top-two margin-bottom-two">
+				<div class="column8">
+					<h2>Forms</h2>
+				</div>
+				<div class="column8">
+					<form>
+						<input type="search" placeholder="Email" />
+					</form>
 				</div>
 			</div>
 		</div>
