Created responsive and fluid layout

--- a/index.html
+++ b/index.html
@@ -1,56 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<link rel="stylesheet" type="text/css" href="css/infra.css" />
-<!-- <link rel="stylesheet" type="text/css" href="mystyle.css"> -->
-<!-- <script src="js/less-1.4.1.min.js" type="text/javascript"></script> -->
-<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-<script src="js/modernizr.custom.18245.js" type="text/javascript"></script>
-<script src="js/infra.js" type="text/javascript"></script>
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
+	<link rel="stylesheet" type="text/css" href="css/infra.css" />
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	<script src="js/modernizr.custom.18245.js" type="text/javascript"></script>
+	<script src="js/infra.js" type="text/javascript"></script>
 </head>
 <body>
-	<div id="container">
 		<div class="centered">
 			<div class="row margin-bottom-one">
 				<div class="column16">
 					<h1>infra Framework</h1>
 				</div>
-			</div>
-			<div class="row margin-bottom-one">
-				<div class="column1">1</div>
-				<div class="column1">2</div>
-				<div class="column1">3</div>
-				<div class="column1">4</div>
-				<div class="column1">5</div>
-				<div class="column1">6</div>
-				<div class="column1">7</div>
-				<div class="column1">8</div>
-				<div class="column1">9</div>
-				<div class="column1">10</div>
-				<div class="column1">11</div>
-				<div class="column1">12</div>
-				<div class="column1">13</div>
-				<div class="column1">14</div>
-				<div class="column1">15</div>
-				<div class="column1">16</div>
-			</div>
-			<div class="row margin-bottom-one">
-				<div class="column2">1</div>
-				<div class="column2">2</div>
-				<div class="column2">3</div>
-				<div class="column2">4</div>
-				<div class="column2">5</div>
-				<div class="column2">6</div>
-				<div class="column2">7</div>
-				<div class="column2">8</div>
-			</div>
-			<div class="row margin-bottom-one">
-				<div class="column4">1</div>
-				<div class="column4">2</div>
-				<div class="column4">3</div>
-				<div class="column4">4</div>
 			</div>
 			<div class="row margin-top-two margin-bottom-two">
 				<div class="column8">
@@ -67,17 +29,6 @@
 					<p>Nam eget erat nunc. In ac eros pulvinar, hendrerit magna in, tempus lacus. Sed consequat at sapien sed tincidunt. Nullam tempor porta urna, quis elementum nibh aliquam ac. Suspendisse mollis dapibus erat, quis pharetra mi gravida ornare. Cras vitae sodales odio. Donec ac elit eu orci suscipit consectetur. Aliquam erat volutpat. Etiam vel consectetur libero. Fusce ut ipsum arcu. Aenean ut turpis in nisl hendrerit posuere eget et diam. Cras gravida dui odio, at molestie magna condimentum sit amet. Nunc viverra nunc a ipsum luctus, ut tristique dui suscipit. Proin ut ultricies purus, sed pharetra turpis.</p>
 				</div>
 			</div>
-			<div class="row margin-top-two margin-bottom-two">
-				<div class="column8">
-					<h2>Forms</h2>
-				</div>
-				<div class="column8">
-					<form>
-						<input type="search" placeholder="Email" />
-					</form>
-				</div>
-			</div>
 		</div>
-	</div>
 </body>
 </html>
