--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
-	<link rel="stylesheet" type="text/css" href="css/infra.css" />
-	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-	<script src="js/modernizr.custom.18245.js" type="text/javascript"></script>
-	<script src="js/infra.js" type="text/javascript"></script>
-</head>
-<body>
+	<head>
+		<title>infra Framework</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
+		<link rel="stylesheet" type="text/css" href="css/infra.css" />
+		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+		<script src="js/modernizr.custom.18245.js" type="text/javascript"></script>
+		<script src="js/infra.js" type="text/javascript"></script>
+	</head>
+	<body>
 		<div class="centered">
 			<div class="row margin-bottom-one">
 				<div class="column16">
@@ -30,5 +31,5 @@
 				</div>
 			</div>
 		</div>
-</body>
+	</body>
 </html>
