Added Symbolset and navigation styling

--- a/index.html
+++ b/index.html
@@ -9,9 +9,32 @@
 		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 		<script src="js/modernizr.custom.18245.js" type="text/javascript"></script>
 		<script src="js/infra.js" type="text/javascript"></script>
+	<link href="//cdn.symbolset.com/051719de2c11a3b59a165dc8c9f86ddff7309c88/symbolset.css" rel="stylesheet">
 	</head>
 	<body>
 		<div class="centered">
+			<div class="row">
+				<ul id="menu-social" class="menu">
+					<li id="menu-item-1478" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1478"><a href="http://twitter.com/rayelder/" class="ss-icon ss-social-circle">twitter</a></li>
+					<li id="menu-item-1481" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1481"><a href="http://behance.net" class="ss-icon ss-social-circle">behance</a></li>
+					<li id="menu-item-1479" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1479"><a href="http://dribbble.com" class="ss-icon ss-social-circle">dribbble</a></li>
+					<li id="menu-item-1480" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1480"><a href="http://github.com" class="ss-icon ss-social-circle">github</a></li>
+					<li id="menu-item-1480" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1480"><a href="http://github.com" class="ss-icon ss-social-circle">facebook</a></li>
+					<li id="menu-item-1480" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1480"><a href="http://github.com" class="ss-icon ss-social-circle">instagram</a></li>
+					<li id="menu-item-1480" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1480"><a href="http://github.com" class="ss-icon ss-social-circle">vimeo</a></li>
+				</ul>
+			</div>
+
+			<div class="row">
+				<div class="column6 span3">
+					<ul id="menu-primary" class="menu">
+						<li><a href="#">Ray Elder</a></li>
+						<li><a href="#">Link</a></li>
+						<li><a href="#">Link</a></li>
+						<li><a href="#">Link</a></li>
+					</ul>
+				</div>
+			</div>
 			
 			<div class="row">
 				<div class="column3 margin-top-two">
@@ -22,9 +45,19 @@
 					<h5>Heading H5</h5>
 					<h6>Heading H6</h6>
 				</div>
-				<div class="column6 margin-top-two">
+				<div class="column6 margin-top-one">
+					<button class="btn-default btn-sm block">Small button</button>
+					<button class="btn-default btn-primary">Default button</button>
+					<button class="btn-default">Default button</button>
+					<div>
+						<button class="btn-default btn-primary btn-lg">Large button</button>
+						<button class="btn-default btn-lg">Large button</button>
+					</div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis congue urna tortor, quis porta lorem hendrerit et. Morbi non leo eget ligula tempus varius. Cras elit libero, varius sed pulvinar ac, bibendum quis velit. Nullam pellentesque, <a href="#">purus id varius tempus, neque enim vulputate nibh, eu euismod tellus metus eu arcu. Nulla scelerisque augue lacus, non dictum sapien pharetra sed. Aliquam at consequat dui.</a> Praesent sit amet ornare metus. Proin lorem neque, vulputate at commodo in, pharetra aliquam velit. <strong>Nullam in purus sed purus adipiscing tempus. Nullam in dignissim arcu.</strong> Interdum et malesuada fames ac ante ipsum primis in faucibus. <em>In hac habitasse platea dictumst.</em></p>
-					<p>Pellentesque id suscipit erat, sit amet elementum est. Sed in augue tempus, auctor lectus quis, ultrices lacus. Donec quis sem sagittis, aliquam mauris ac, rutrum elit. Nam erat ipsum, congue eu nibh eget, ultricies imperdiet leo. Vestibulum auctor, diam eget tincidunt varius, neque nulla aliquam felis, ut aliquam diam dui nec urna. Suspendisse quis orci libero. Quisque sed nulla in lacus sagittis laoreet. Integer vel leo non tellus tempor bibendum id vitae quam. Pellentesque sed neque eget metus hendrerit accumsan.</p>
+					<button class="btn-default btn-primary block">Default button</button>
+					<button class="btn-default btn-primary block">Default button</button>
+					
+					<p>Pellentesque id suscipit erat, sit amet elementum est. Sed in augue tempus, auctor lectus quis, ultrices lacus. Donec quis sem sagittis, aliquam mauris ac, rutrum elit. <a href="#" class="lnk-primary">Nam erat ipsum, congue eu nibh eget, ultricies imperdiet leo.</a> Vestibulum auctor, diam eget tincidunt varius, neque nulla aliquam felis, ut aliquam diam dui nec urna. Suspendisse quis orci libero. Quisque sed nulla in lacus sagittis laoreet. Integer vel leo non tellus tempor bibendum id vitae quam. Pellentesque sed neque eget metus hendrerit accumsan.</p>
 					<blockquote cite="http://www.worldwildlife.org/who/index.html">
 						<p>As my fellow HTML5 Doctor, Oli Studholme has showed, people seldom quote exactly so sacrosanctity of the quoted text isn't a useful ideal and in print etc, citations almost always appear as part of the quotation it's highly conventional.</p>
 						<footer>
@@ -34,5 +67,6 @@
 				</div>
 			</div>
 		</div>
+		<script src="//cdn.symbolset.com/051719de2c11a3b59a165dc8c9f86ddff7309c88/symbolset.js"></script>
 	</body>
 </html>
