Fixing Symbolset webfonts

--- a/index.html
+++ b/index.html
@@ -14,20 +14,19 @@
 	<body>
 		<div class="centered">
 			<div class="row">
-				<ul id="menu-social" class="menu">
-					<li id="menu-item-1478" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1478"><a href="http://twitter.com/rayelder/" class="ss-icon ss-social-circle">twitter</a></li>
-					<li id="menu-item-1481" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1481"><a href="http://behance.net" class="ss-icon ss-social-circle">behance</a></li>
-					<li id="menu-item-1479" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1479"><a href="http://dribbble.com" class="ss-icon ss-social-circle">dribbble</a></li>
-					<li id="menu-item-1480" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1480"><a href="http://github.com" class="ss-icon ss-social-circle">github</a></li>
-					<li id="menu-item-1480" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1480"><a href="http://github.com" class="ss-icon ss-social-circle">facebook</a></li>
-					<li id="menu-item-1480" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1480"><a href="http://github.com" class="ss-icon ss-social-circle">instagram</a></li>
-					<li id="menu-item-1480" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1480"><a href="http://github.com" class="ss-icon ss-social-circle">vimeo</a></li>
-				</ul>
+				<div class="column6 span3">
+					<ul id="social" class="ss-icon ss-social-circle">
+						<li ><a href="#">twitter</a></li>
+						<li ><a href="#">twitter</a></li>
+						<li ><a href="#">twitter</a></li>
+					</ul>
+				</div>
+				
 			</div>
 
 			<div class="row">
 				<div class="column6 span3">
-					<ul id="menu-primary" class="menu">
+					<ul id="primary">
 						<li><a href="#">Ray Elder</a></li>
 						<li><a href="#">Link</a></li>
 						<li><a href="#">Link</a></li>
