--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 	</head>
 	<body>
 		<div class="centered">
-			<div class="row">
+			<div class="row margin-top-one">
 				<div class="column6 span3">
 					<ul id="social" class="ss-icon ss-social-circle">
 						<li ><a href="#">twitter</a></li>
-						<li ><a href="#">twitter</a></li>
-						<li ><a href="#">twitter</a></li>
+						<li ><a href="#">instagram</a></li>
+						<li ><a href="#">github</a></li>
 					</ul>
 				</div>
 				
@@ -36,7 +36,7 @@
 			</div>
 			
 			<div class="row">
-				<div class="column3 margin-top-two">
+				<div class="column4">
 					<h1>Heading H1</h1>
 					<h2>Heading H2</h2>
 					<h3>Heading H3</h3>
