Added tables and images component sections

--- a/images/index.html
+++ b/images/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>infra Framework - Navigation</title>
+		<title>infra Framework - Images</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 		<script type="text/javascript" src="//use.typekit.net/hhp6rtd.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -19,29 +19,10 @@
 			<div class="row margin-top-one">
 				<div class="column4" id="description"></div>
 				<div class="column8">
-					<h2>Navigation</h2>
-					<div>
-						<button class="btn-default btn-primary btn-lg">Large button</button>
-						<button class="btn-default btn-lg">Large button</button>
-					</div>
-					
-					<button class="btn-default btn-primary block">Default button</button>
-					<button class="btn-default btn-primary block">Default button</button>
-					<button class="btn-default btn-sm block">Small button</button>
-					<button class="btn-default btn-primary">Default button</button>
-					<button class="btn-default">Default button</button>
+					<h2>Images</h2>
+					<p><em>Empty</em></p>
 				</div>
 				<div class="column4" id="navigation"></div>
-			</div>
-			<div class="row">
-				<div class="column6 span3">
-					<ul id="primary">
-						<li><a href="#">Ray Elder</a></li>
-						<li><a href="#">Link</a></li>
-						<li><a href="#">Link</a></li>
-						<li><a href="#">Link</a></li>
-					</ul>
-				</div>
 			</div>
 		</div>
 		<script src="//cdn.symbolset.com/051719de2c11a3b59a165dc8c9f86ddff7309c88/symbolset.js"></script>
