Styled <small> tag

--- a/typography/index.html
+++ b/typography/index.html
@@ -21,6 +21,8 @@
 				<div class="column8">
 					<h2>Typography</h2>
 					<p><span class="small-caps">Lorem ipsum</span> dolor sit amet, consectetur adipiscing elit. Duis congue urna tortor, quis porta lorem hendrerit et. Morbi non leo eget ligula tempus varius. Cras elit libero, varius sed pulvinar ac, bibendum quis velit. Nullam pellentesque, <a href="#">purus id varius tempus, neque enim vulputate nibh, eu euismod tellus metus eu arcu. Nulla scelerisque augue lacus, non dictum sapien pharetra sed. Aliquam at consequat dui.</a> Praesent sit amet ornare metus. Proin lorem neque, vulputate at commodo in, pharetra aliquam velit. <strong>Nullam in purus sed purus adipiscing tempus. Nullam in dignissim arcu.</strong> Interdum et malesuada fames ac ante ipsum primis in faucibus. <em>In hac habitasse platea dictumst.</em></p>
+					<p><span class="small-caps">Lorem ipsum</span> dolor sit amet, consectetur adipiscing elit. Duis congue urna tortor, quis porta lorem hendrerit et. Morbi non leo eget ligula tempus varius. Cras elit libero, varius sed pulvinar ac, bibendum quis velit. Nullam pellentesque, <a href="#">purus id varius tempus, neque enim vulputate nibh, eu euismod tellus metus eu arcu. Nulla scelerisque augue lacus, non dictum sapien pharetra sed. Aliquam at consequat dui.</a> Praesent sit amet ornare metus. Proin lorem neque, vulputate at commodo in, pharetra aliquam velit. <strong>Nullam in purus sed purus adipiscing tempus. Nullam in dignissim arcu.</strong> Interdum et malesuada fames ac ante ipsum primis in faucibus. <em>In hac habitasse platea dictumst.</em></p>
+					<p><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis congue urna tortor, quis porta lorem hendrerit et. Morbi non leo eget ligula tempus varius.Lorem ipsum dolor sit amet, consectetur adipiscing elit. </small></p>
 					<h1>Heading H1</h1>
 					<h2>Heading H2</h2>
 					<h3>Heading H3</h3>
@@ -33,6 +35,7 @@
 							<cite><a href="http://www.brucelawson.co.uk/2013/on-citing-quotations-again/">Bruce Lawson</a></cite>
 						</footer>
 					</blockquote>
+
 				</div>
 				<div class="column4" id="navigation"></div>
 			</div>
